--- a/resources/[hp]/hp_dyn/html/index.html
+++ b/resources/[hp]/hp_dyn/html/index.html
@@ -16,7 +16,7 @@
       <div class="row">
         <div class="col-12 text-center">
 		
-          <h1>HYPERION<span>NETWORK</span></h1>
+          <h1>Lasse <span style="color:red;">Mejdahl </span>Christensen</h1>
         </div>
       </div>
       <div class="row">
